@@ -29,6 +29,8 @@ static const char cvs_ident[] = "$Id$";
 
 #include <libast_internal.h>
 
+static spif_uint32_t spif_socket_get_ipaddr(spif_socket_t);
+
 /* *INDENT-OFF* */
 static spif_const_class_t o_class = {
     SPIF_DECL_CLASSNAME(socket),
@@ -54,6 +56,16 @@ spif_socket_new(void)
     return self;
 }
 
+spif_socket_t
+spif_socket_new_from_url(spif_url_t url)
+{
+    spif_socket_t self;
+
+    self = SPIF_ALLOC(socket);
+    spif_socket_init_from_url(self, url);
+    return self;
+}
+
 spif_bool_t
 spif_socket_del(spif_socket_t self)
 {
@@ -64,6 +76,14 @@ spif_socket_del(spif_socket_t self)
 
 spif_bool_t
 spif_socket_init(spif_socket_t self)
+{
+    spif_obj_init(SPIF_OBJ(self));
+    spif_obj_set_class(SPIF_OBJ(self), SPIF_CLASS_VAR(socket));
+    return TRUE;
+}
+
+spif_bool_t
+spif_socket_init_from_url(spif_socket_t self, spif_url_t url)
 {
     spif_obj_init(SPIF_OBJ(self));
     spif_obj_set_class(SPIF_OBJ(self), SPIF_CLASS_VAR(socket));
@@ -112,4 +132,45 @@ spif_classname_t
 spif_socket_type(spif_socket_t self)
 {
     return SPIF_OBJ_CLASSNAME(self);
+}
+
+spif_bool_t
+spif_socket_open(spif_socket_t self)
+{
+
+}
+
+static spif_uint32_t
+spif_socket_get_ipaddr(spif_socket_t self)
+{
+    struct hostent *hinfo;
+    struct in_addr *addr;
+    char *ipaddr_str;
+    spif_str_t hostname;
+    spif_uint8_t tries;
+
+    REQUIRE_RVAL(!SPIF_SOCKET_ISNULL(self), 0);
+
+    hostname = SPIF_STR(spif_url_get_host(SPIF_URL(self->dest_url)));
+    REQUIRE_RVAL(!SPIF_STR_ISNULL(hostname), 0);
+
+    h_errno = 0;
+    tries = 0;
+    do {
+        tries++;
+        hinfo = gethostbyname(SPIF_STR_STR(hostname));
+    } while ((tries <= 3) && (hinfo == NULL) && (h_errno == TRY_AGAIN));
+    if (hinfo == NULL) {
+        print_error("Unable to resolve hostname \"%s\" -- %s\n", SPIF_STR_STR(hostname), hstrerror(h_errno));
+        return 0;
+    }
+
+    ipaddr_str = hinfo->h_addr_list[0];
+    addr = SPIF_CAST_C(struct in_addr *) MALLOC(sizeof(struct in_addr));
+    if ((inet_aton(ipaddr_str, addr)) == 0) {
+        print_error("Invalid address \"%s\" returned by gethostbyname()\n", NONULL(ipaddr_str));
+        return 0;
+    }
+
+    return *(SPIF_CAST_PTR(uint32) (addr));
 }
